syntax = "proto3";

package infraboard.mcenter.role;
option go_package = "github.com/infraboard/mcenter/apps/role";

import "mcube/pb/resource/meta.proto";
import "mcube/pb/resource/visiable.proto";
import "mcenter/apps/role/pb/permission.proto";

// Role is rbac's role
message Role {
    // 元信息
    // @gotags: bson:",inline" json:"meta"
    mcube.resource.Meta meta = 1;
    // 角色描述信息
    // @gotags: bson:",inline" json:"spec"
    CreateRoleRequest spec = 2;
    // 角色的权限
    // @gotags: bson:"-" json:"permissions,omitempty"
    repeated PermissionSpec permissions = 4;
}

message RoleSet {
    // @gotags: bson:"total" json:"total"
    int64 total = 1;
    // @gotags: bson:"items" json:"items"
    repeated Role items = 2;
}

// CreateRoleRequest 创建角色请求
message CreateRoleRequest {
    // 所属域
    // @gotags: bson:"domain" json:"domain"
    string domain = 1;
    // 所属域
    // @gotags: bson:"namespace" json:"namespace"
    string namespace = 2;
    // 创建者ID
    // @gotags: bson:"create_by" json:"create_by"
    string create_by = 3; 
    // 只读角色, 只读角色不能修改, 可以删除
    // @gotags: bson:"read_only" json:"read_only"
    bool read_only = 4;
    // 角色名称
    // @gotags: bson:"name" json:"name" validate:"required,lte=30"
    string name = 5;
    // 角色描述
    // @gotags: bson:"description" json:"description" validate:"lte=400"
    string description =6;
    // 权限定义
    // @gotags: bson:"-" json:"permissions,omitempty"
    repeated PermissionSpec specs = 7;
    // 是否启用
    // @gotags: bson:"enabled" json:"enabled"
    bool enabled = 8;
    // 角色可见性
    // @gotags: bson:"visiable" json:"visiable"
    mcube.resource.VISIABLE visiable = 9;
    // 角色关联的其他信息，比如展示的视图
    // @gotags: bson:"lables" json:"lables" validate:"lte=400"
    map<string,string> lables =15;                 
}

// DeleteRoleRequest role删除
message DeleteRoleRequest {
    // 资源范围
    // @gotags: json:"scope"
    mcube.resource.Scope scope = 3;
    // 角色Id
    // @gotags: json:"id" validate:"required,lte=64"
    string id = 1;
    // 是否删除角色关联策略
    // @gotags: json:"delete_policy"
    bool delete_policy = 2;
}